# dkb-analyze

./: .gitignore  Cargo.toml  README.md  car  groceries  house  savings  subscription
.github/: FUNDING.yml
scripts/: translateHeader.sh
src/: analyzing.rs  categories.rs  lib.rs  main.rs  spendings.csv
tests/: main_test.rs
