[package]
name = "dkb-analyze"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Library to analyze bank account exports from German DKB."
readme = "README.md"
homepage = "https://github.com/TypoAtLineZero/dkb-analyze"
repository = "https://github.com/TypoAtLineZero/dkb-analyze"
keywords = ["dkb", "banking", "finance"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
polars = { version = "0.43.1", features = ["csv"] }
polars-core = "0.43.1"
polars-io = "0.43.1"
